--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --shadow: rgba(0, 0, 0, 0.1);
+}
+
 body {
     margin: 0;
 }
@@ -10,28 +14,47 @@ body {
 }
 
 #image-container {
-    display: flex;
     width: 40%;
-    background-color: aquamarine;
+    background-image: url(bg-image.jpg);
 }
 
 #company-container {
-    align-self: center;
+    margin-top: 20vh;
     width: 100%;
+    height: 10vh;
     background-color: rgba(0, 0, 0, 0.1);
+}
+
+img {
+    height: 80%;
+    width: 50px;
+    background-color: blueviolet;
 }
 
 #sign-up-container {
     height: 100%;
+    width: max(1000px);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+}
+
+#sign-up-container>div:not(#form-container) {
+    margin: auto;
+    padding: 0 10px;
 }
 
 #form-container {
+    box-shadow: 0 3px var(--shadow), 0 -3px var(--shadow);
+    padding: 20px max(25vw, 100px) 20px 20px;
+    height: fit-content;
 }
 
 form {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
+}
+
+.input>input {
+    display: block;
 }
