--- a/style.css
+++ b/style.css
@@ -21,6 +21,14 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     width: max(20%, 500px);
+    display: flex;
+    flex-direction: column;
+}
+
+#image-container>span {
+    display:block;
+    margin-top: auto;
+    text-align: center;
 }
 
 #company-container {
@@ -28,12 +36,20 @@ body {
     width: 100%;
     height: 10vh;
     background-color: rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
 }
 
 img {
     height: 80%;
-    width: 50px;
-    background-color: blueviolet;
+    margin-left: auto;
+}
+
+#company-container>span {
+    color:white;
+    font-size: 2rem;
+    margin-left: 1rem;
+    margin-right: auto;
 }
 
 #sign-up-container {
